# ISMF-Battery-Monitor

./: .gitignore  pyproject.toml
Scripts/: app.py
ismf_battery_monitor/: __init__.py  errors.py  events.py  helpers.py  log_engine.py  monitor.py
ismf_battery_monitor/assets/: __init__.py  char_map.json  font_map.py
ismf_battery_monitor/gui/: errors.py
ismf_battery_monitor/gui/event/: __init__.py  collection.py  errors.py  event.py
ismf_battery_monitor/gui/layout/: __init__.py  base.py
ismf_battery_monitor/gui/metaclasses/: __init__.py
ismf_battery_monitor/gui/windows/: base.py
ismf_battery_monitor/gui/windows/main/: __init__.py  layout.py
ismf_battery_monitor/notify/audio/: __init__.py
ismf_battery_monitor/notify/audio/files/: __init__.py
ismf_battery_monitor/notify/sounds/: __init__.py  base.py
